--- a/src/main/resources/assets/goldenhopper/lang/en_US.lang
+++ b/src/main/resources/assets/goldenhopper/lang/en_US.lang
@@ -1,2 +1,4 @@
 tile.golden_hopper.name=Golden Hopper
+item.golden_hopper.name=Golden Hopper
 container.goldenhopper=Golden Hopper
+itemGroup.goldenhopper=Golden Hopper
